fix: overflow when station selected

--- a/packages/frontend/src/components/Form/AutocompleteInputForm/AutocompleteInputForm.css
+++ b/packages/frontend/src/components/Form/AutocompleteInputForm/AutocompleteInputForm.css
@@ -39,4 +39,5 @@ section img {
     overflow-y: auto;
     transition: ease-in-out var(--transition-default);
     max-height: calc(100vh - 475px);
+    min-height: 40px;
 }
